# RedFish

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  dconfig
dataset/: line.csv
docs/html/: ActivationLayer_8cpp_source.html  ActivationLayer_8h_source.html  ConvLayer_8cpp_source.html  ConvLayer_8h_source.html  Data_8h_source.html  DropoutLayer_8cpp_source.html  DropoutLayer_8h_source.html  FlattenLayer_8cpp_source.html  FlattenLayer_8h_source.html  Layer_8cpp_source.html  Layer_8h_source.html  LinearLayer_8cpp_source.html  LinearLayer_8h_source.html  Loss_8cpp_source.html  Loss_8h_source.html  MaxPoolLayer_8cpp_source.html  MaxPoolLayer_8h_source.html  Model_8cpp_source.html  Model_8h_source.html  OpenCLManager_8cpp_source.html  OpenCLManager_8h_source.html  Optimizer_8cpp_source.html  Optimizer_8h_source.html  Plot_8h_source.html  QTable_8h_source.html  RedFish_8h_source.html  TensorStd_8cpp_source.html  TensorView_8cpp_source.html  Tensor_8cpp_source.html  Tensor_8h_source.html  annotated.html  classRedFish_1_1Activation_1_1Gaussian-members.html  classRedFish_1_1Activation_1_1Gaussian.html  classRedFish_1_1Activation_1_1Identity-members.html  classRedFish_1_1Activation_1_1Identity.html  classRedFish_1_1Activation_1_1LeakyReLU-members.html  classRedFish_1_1Activation_1_1LeakyReLU.html  classRedFish_1_1Activation_1_1PReLU-members.html  classRedFish_1_1Activation_1_1PReLU.html  classRedFish_1_1Activation_1_1ReLU-members.html  (+73 more)
docs/html/search/: all_1.js  all_4.js  all_5.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_0.js  related_0.js  related_1.js  searchdata.js
include/: Activation.h  ActivationLayer.h  Algebra.h  Algebra2.h  ConvLayer.h  Data.h  DropoutLayer.h  FlattenLayer.h  Layer.h  LinearLayer.h  LinearRegression.h  Loss.h  Math.h  MaxPoolLayer.h  Model.h  OpenCLManager.h  Optimizer.h  Parser.h  Plot.h  ReadData.h  RecurrentLayer.h  RedFish.h  Tensor.h  Test.h  With.h  swap_endian.h
src/: ActivationLayer.cpp  ConvLayer.cpp  DropoutLayer.cpp  FlattenLayer.cpp  Layer.cpp  LinearLayer.cpp  Loss.cpp  MaxPoolLayer.cpp  Model.cpp  OpenCLManager.cpp  Optimizer.cpp  RecurrentLayer.cpp  Tensor.cpp  TensorStd.cpp  TensorView.cpp  main.cpp  mainMatrixMul.cpp  test.cpp
src/Tensor/: algebra.cpp  conv.cpp  fft.cpp  matmul.cpp
src/kernels/: TensorBasic.cl  TensorBasicBroadcast.cl  TensorConv.cl  TensorCrossCorrelation.cl  TensorMul.cl  TensorStd.cl  TensorStrassenMul.cl  TensorTranspose.cl
test/: CMakeLists.txt  algebra_test.cpp  redfish_test.cpp  tensor_test.cpp
